--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-2">
                     <img class="img3" src="./image/book4.jpg" width="40%" height="40%">
-                    <h3>Christmas Hamper</h3>
+                    <h3>Christmas</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -88,7 +88,7 @@
             <div class="row1">
                 <div class="col-2">
                     <img class="img3" src="./image/book01.jpeg" width="40%" height="40%">
-                    <h3>Issac Story</h3>
+                    <h3>AnneFrank</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-2">
                     <img class="img3" src="./image/book02.jpeg" width="40%" height="50%">
-                    <h3>All Grown Up</h3>
+                    <h3>Nelson</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-2">
                     <img class="img3" src="./image/book03.jpg" width="40%" height="40%">
-                    <h3>Ghost Story</h3>
+                    <h3>Teresa</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-2">
                     <img class="img3" src="./image/book04.jpg" width="40%" height="40%">
-                    <h3>Christmas Hamper</h3>
+                    <h3>Enstein</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
