--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="d1">
                     <ul>
-                        <li><a href="index1.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">About us</a></li>
                         <li><a href="register.html">Register</a></li>
                     </ul>
@@ -38,7 +38,7 @@
         <div class="sec">   
             <div class="row1">
                 <div class="col-2">
-                    <img class="img3" src="./image/book1.jpg" width="40%" height="40%">
+                    <img class="img3" src="./image/book1.jpg" width="60%" height="40%">
                     <h3>Issac Story</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -49,7 +49,7 @@
                     <button id="buy">Buy</button>
                 </div>
                 <div class="col-2">
-                    <img class="img3" src="./image/book2.jpg" width="40%" height="50%">
+                    <img class="img3" src="./image/book2.jpg" width="60%" height="50%">
                     <h3>All Grown Up</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -60,7 +60,7 @@
                     <button id="buy">Buy</button>
                 </div>
                 <div class="col-2">
-                    <img class="img3" src="./image/book3.jpeg" width="40%" height="40%">
+                    <img class="img3" src="./image/book3.jpeg" width="60%" height="40%">
                     <h3>Ghost Story</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -71,7 +71,7 @@
                     <button id="buy">Buy</button>
                 </div>
                 <div class="col-2">
-                    <img class="img3" src="./image/book4.jpg" width="40%" height="40%">
+                    <img class="img3" src="./image/book4.jpg" width="60%" height="40%">
                     <h3>Christmas</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -87,7 +87,7 @@
           </div>   
             <div class="row1">
                 <div class="col-2">
-                    <img class="img3" src="./image/book01.jpeg" width="40%" height="40%">
+                    <img class="img3" src="./image/book01.jpeg" width="60%" height="40%">
                     <h3>AnneFrank</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -98,7 +98,7 @@
                     <button id="buy">Buy</button>
                 </div>
                 <div class="col-2">
-                    <img class="img3" src="./image/book02.jpeg" width="40%" height="50%">
+                    <img class="img3" src="./image/book02.jpeg" width="60%" height="50%">
                     <h3>Nelson</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -109,7 +109,7 @@
                     <button id="buy">Buy</button>
                 </div>
                 <div class="col-2">
-                    <img class="img3" src="./image/book03.jpg" width="40%" height="40%">
+                    <img class="img3" src="./image/book03.jpg" width="60%" height="40%">
                     <h3>Teresa</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -120,7 +120,7 @@
                     <button id="buy">Buy</button>
                 </div>
                 <div class="col-2">
-                    <img class="img3" src="./image/book04.jpg" width="40%" height="40%">
+                    <img class="img3" src="./image/book04.jpg" width="60%" height="40%">
                     <h3>Enstein</h3>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
