--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
         </div>
         <div class="d1">
             <ul>
-                <li><a href="index1.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About us</a></li>
                 <li><a href="register.html">Register</a></li>
             </ul>
